# template-python-package

./: .gitignore  .version  README.md  pyproject.toml  requirements.dev.txt  requirements.doc.txt
.github/workflows/: auto.yml  manual.yml
doc/mypkg/: index.html  my_module.html
doc/template-python-package/src/: index.html
doc/template-python-package/src/mypkg/: index.html  my_module.html
doc/template-python-package/src/otherpkg/: index.html  other_module.html
doc/template-python-package/tests/: test_class_demo.html
hook/: post-commit  pre-push
hooks/: post-commit  pre-commit  pre-push
sample_usage/: sample0.py  sample1.py  sample2.py  sample3.cmd  sample3.sh
src/bad_mod/: __init__.py
src/fdo_mod/: __init__.py  fdo_module.py
src/mypkg/: __init__.py  _version.py  my_module.py
src/otherpkg/: __init__.py
tests/: test_class_demo.py  test_fdo_mod.py
usage_samples/: import_it.py
