# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fdobad-template"
authors = [
    {name = "Fernando Badilla Veliz", email = "fbadilla@ing.uchile.cl"},
]
description = "Python template project"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["template", "distribution", "example"]
license = {text = "GPLv3"} # , file = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    'importlib-metadata',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = ".version"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [tool.setuptools]
# package-dir = {"" = "src"}

# [tool.setuptools.packages.find]
# where = ["src"]

# [project.scripts]
# my-script = "mypkg.my_module:main"
 
# [project.gui-scripts]
# spam-gui = "spam:main_gui"
 
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
enabled = true
line-length = 120
preview = true

[tool.pylint.BASIC]
good-names = ["i",
              "j",
              "k",
              "H",
              "W",
              "df",
              "dt",
              "dx",
              "dy",
              "ok",
              "_",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylsp-mypy]
enabled = true
